Correção dos resultados do Projeto 01

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -116,12 +116,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
      "start_time": "2024-04-28T15:33:11.434985Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade estimada é de aproximadamente 0.0911 ou 9.11%.\n",
+      "A probabilidade obtida é de aproximadamente 0.0909 ou 9.09%.\n",
+      "Os valores das probabilidades obtida e estimada são próximos.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math as m\n",
@@ -149,25 +161,13 @@
     "\n",
     "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol=0.05):\n",
     "    print(\"Os valores das probabilidades obtida e estimada são próximos.\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A probabilidade estimada é de aproximadamente 0.0909 ou 9.09%.\n",
-      "A probabilidade obtida é de aproximadamente 0.0909 ou 9.09%.\n",
-      "Os valores das probabilidades obtida e estimada são próximos.\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Com $100000$ tentativas, a probabilidade estimada de que os dois dados rolaram seis é de aproximadamente $0.0919$ ou $9.19$%, que é um valor bem próximo da probabilidade obtida de aproximadamente $0.0909$ ou $9.19$%.\n",
+    "Com $100000$ tentativas, a probabilidade estimada de que os dois dados rolaram seis é de aproximadamente $0.0911$ ou $9.11$%, que é um valor bem próximo da probabilidade obtida de aproximadamente $0.0909$ ou $9.09$%.\n",
     "\n",
     "Em geral, quanto maior o número de tentativas, mais precisa será a estimativa. A lei dos grandes números (assunto do tópico \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado.\n",
     "\n",
@@ -210,13 +210,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:13.424954Z",
      "start_time": "2024-04-28T15:33:11.864997Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6666 ou 66.66%.\n",
+      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3326 ou 33.26%.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -242,18 +253,7 @@
     "\n",
     "print(f\"A probabilidade estimada de vitória mudando de porta é de aproximadamente {probabilidade_estimada_mudando:.4f} ou {probabilidade_estimada_mudando * 100:.2f}%.\")\n",
     "print(f\"A probabilidade estimada de vitória não mudando de porta é de aproximadamente {probabilidade_estimada_nao_mudando:.4f} ou {probabilidade_estimada_nao_mudando * 100:.2f}%.\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A probabilidade de vitória mudando de porta é de aproximadamente 0.6663 ou 66.63%.\n",
-      "A probabilidade de vitória não mudando de porta é de aproximadamente 0.3340 ou 33.40%.\n"
-     ]
-    }
-   ],
-   "execution_count": 2
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,7 +261,7 @@
     "id": "ZLMuLgq3wrjJ"
    },
    "source": [
-    "A probabilidade estimada de vitória ao mudar de porta é de aproximadamente $0.6667$ ou $66.67$%, enquanto a probabilidade estimada de vitória ao não mudar de porta é de aproximadamente $0.3333$ ou $33.33$%.\n",
+    "A probabilidade estimada de vitória ao mudar de porta é de aproximadamente $0.6666$ ou $66.66$%, enquanto a probabilidade estimada de vitória ao não mudar de porta é de aproximadamente $0.3326$ ou $33.26$%.\n",
     "\n",
     "Portanto, a estratégia mais lógica é mudar de porta. \n",
     "\n",
@@ -277,11 +277,13 @@
    "metadata": {
     "id": "i9P5y-aBw31c"
    },
-   "source": "b) Agora sim, justifique fazendo as contas a probabilidade encontrada no item a)."
+   "source": [
+    "b) Agora sim, justifique fazendo as contas a probabilidade encontrada no item a)."
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Podemos utilizar o Teorema de Bayes para calcular a probabilidade de ganhar o prêmio ao mudar de porta. \n",
     "\n",
@@ -350,16 +352,26 @@
    "metadata": {
     "id": "VQSdGXm5zWH7"
    },
-   "source": ""
+   "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:35:47.103279Z",
      "start_time": "2024-04-28T15:35:42.383644Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8730 ou 87.30%.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -415,21 +427,11 @@
     "probabilidade_estimada = (resultados['X'] + resultados['O']) / sum(resultados.values())\n",
     "\n",
     "print(f\"A probabilidade estimada de que o jogo não termine em empate é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8734 ou 87.34%.\n"
-     ]
-    }
-   ],
-   "execution_count": 4
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "A probabilidade de que o jogo não termine em empate é de aproximadamente $0.8734$ ou $87.34$%.\n",
     "\n",
@@ -450,8 +452,8 @@
    ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "O jogador que começa tem mais chances de ganhar, pois ele tem uma jogada a mais do que o segundo jogador.\n",
     "\n",
@@ -475,8 +477,8 @@
   },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
-   "name": "python3",
-   "language": "python"
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
