Refatoração de códigos do Projeto 01

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -93,6 +93,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math as m"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "6jbjorsno16i"
@@ -116,7 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rolagem_de_dois_dados(numero_de_tentativas = 100000):\n",
+    "    contagem_pelo_menos_um_seis = 0\n",
+    "    contagem_dois_seis = 0\n",
+    "\n",
+    "    for numero_de_tentativa in range(numero_de_tentativas):\n",
+    "        dado1 = np.random.randint(1, 7)\n",
+    "        dado2 = np.random.randint(1, 7)\n",
+    "    \n",
+    "        if dado1 == 6 or dado2 == 6:\n",
+    "            contagem_pelo_menos_um_seis += 1\n",
+    "            if dado1 == 6 and dado2 == 6:\n",
+    "                contagem_dois_seis += 1\n",
+    "                \n",
+    "    return contagem_dois_seis, contagem_pelo_menos_um_seis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
@@ -128,46 +160,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada é de aproximadamente 0.0911 ou 9.11%.\n",
+      "A probabilidade estimada é de aproximadamente 0.0909 ou 9.09%.\n",
       "A probabilidade obtida é de aproximadamente 0.0909 ou 9.09%.\n",
-      "Os valores das probabilidades obtida e estimada são próximos.\n"
+      "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import math as m\n",
+    "contagem_dois_seis, contagem_pelo_menos_um_seis = rolagem_de_dois_dados(numero_de_tentativas = 1000000)\n",
     "\n",
-    "def rolagem_dois_dados(num_tentativas = 100000):\n",
-    "    contagem_pelo_menos_um_seis = 0\n",
-    "    contagem_dois_seis = 0\n",
-    "\n",
-    "    for num_tentativa in range(num_tentativas):\n",
-    "        dado1 = np.random.randint(1, 7)\n",
-    "        dado2 = np.random.randint(1, 7)\n",
-    "    \n",
-    "        if dado1 == 6 or dado2 == 6:\n",
-    "            contagem_pelo_menos_um_seis += 1\n",
-    "            if dado1 == 6 and dado2 == 6:\n",
-    "                contagem_dois_seis += 1\n",
-    "                \n",
-    "    return contagem_dois_seis / contagem_pelo_menos_um_seis\n",
-    "\n",
-    "probabilidade_estimada = rolagem_dois_dados(100000)\n",
+    "probabilidade_estimada = contagem_dois_seis / contagem_pelo_menos_um_seis\n",
     "probabilidade_obtida = 1 / 11\n",
     "\n",
     "print(f\"A probabilidade estimada é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
     "print(f\"A probabilidade obtida é de aproximadamente {probabilidade_obtida:.4f} ou {probabilidade_obtida * 100:.2f}%.\")\n",
     "\n",
-    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol=0.05):\n",
-    "    print(\"Os valores das probabilidades obtida e estimada são próximos.\")"
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol = 0.05):\n",
+    "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com $100000$ tentativas, a probabilidade estimada de que os dois dados rolaram seis é de aproximadamente $0.0911$ ou $9.11$%, que é um valor bem próximo da probabilidade obtida de aproximadamente $0.0909$ ou $9.09$%.\n",
+    "Com $1000000$ tentativas, a probabilidade estimada de que os dois dados rolaram seis é de aproximadamente $0.0909$ ou $9.09$%, que é um valor bem próximo da probabilidade obtida de aproximadamente $0.0909$ ou $9.09$%.\n",
     "\n",
     "Em geral, quanto maior o número de tentativas, mais precisa será a estimativa. A lei dos grandes números (assunto do tópico \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado.\n",
     "\n",
@@ -201,40 +217,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "RY65vLyfwNnN"
-   },
-   "source": [
-    "a) Talvez você já saiba a resposta para esse problema, uma vez que ele é bem famoso, mas não tem problema! Faça simulações para encontrar qual é o melhor cenário para o participante: manter sua escolha inicial ou mudar de porta. Justifique, **intuitivamente** (ou seja, **sem fazer contas**) porque essa escolha é razoável."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-28T15:33:13.424954Z",
-     "start_time": "2024-04-28T15:33:11.864997Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6666 ou 66.66%.\n",
-      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3326 ou 33.26%.\n"
-     ]
-    }
-   ],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "def problema_monty_hall(num_tentativas = 100000, trocar_porta = True):\n",
+    "def problema_de_monty_hall(numero_de_tentativas = 100000, trocar_porta = True):\n",
     "    contagem_vitorias = 0\n",
     "    \n",
-    "    for num_tentativa in range(num_tentativas):\n",
+    "    for numero_de_tentativa in range(numero_de_tentativas):\n",
     "        porta_premiada = np.random.randint(3)\n",
     "        porta_escolhida = np.random.randint(3)\n",
     "\n",
@@ -246,13 +237,64 @@
     "        if porta_escolhida == porta_premiada:\n",
     "            contagem_vitorias += 1\n",
     "        \n",
-    "    return contagem_vitorias / num_tentativas\n",
+    "    return contagem_vitorias, numero_de_tentativas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "RY65vLyfwNnN"
+   },
+   "source": [
+    "a) Talvez você já saiba a resposta para esse problema, uma vez que ele é bem famoso, mas não tem problema! Faça simulações para encontrar qual é o melhor cenário para o participante: manter sua escolha inicial ou mudar de porta. Justifique, **intuitivamente** (ou seja, **sem fazer contas**) porque essa escolha é razoável."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-28T15:33:13.424954Z",
+     "start_time": "2024-04-28T15:33:11.864997Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade estimada de vitória mudando de porta é de aproximadamente 0.6674 ou 66.74%.\n",
+      "A probabilidade obtida de vitória mudando de porta é de aproximadamente 0.6667 ou 66.67%.\n",
+      "A probabilidade estimada é próxima da probabilidade obtida.\n",
+      "\n",
+      "A probabilidade estimada de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
+      "A probabilidade obtida de vitória não mudando de porta é de aproximadamente 0.3333 ou 33.33%.\n",
+      "A probabilidade estimada é próxima da probabilidade obtida.\n"
+     ]
+    }
+   ],
+   "source": [
+    "contagem_vitorias, numero_de_tentativas = problema_de_monty_hall(numero_de_tentativas = 100000, trocar_porta = True)\n",
     "\n",
-    "probabilidade_estimada_mudando = problema_monty_hall(num_tentativas = 100000, trocar_porta = True)\n",
-    "probabilidade_estimada_nao_mudando = problema_monty_hall(num_tentativas = 100000, trocar_porta = False)\n",
+    "probabilidade_estimada = contagem_vitorias / numero_de_tentativas\n",
+    "probabilidade_obtida = 2 / 3\n",
     "\n",
-    "print(f\"A probabilidade estimada de vitória mudando de porta é de aproximadamente {probabilidade_estimada_mudando:.4f} ou {probabilidade_estimada_mudando * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade estimada de vitória não mudando de porta é de aproximadamente {probabilidade_estimada_nao_mudando:.4f} ou {probabilidade_estimada_nao_mudando * 100:.2f}%.\")"
+    "print(f\"A probabilidade estimada de vitória mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade obtida de vitória mudando de porta é de aproximadamente {probabilidade_obtida:.4f} ou {probabilidade_obtida * 100:.2f}%.\")\n",
+    "\n",
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol = 0.05):\n",
+    "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\\n\")\n",
+    "\n",
+    "contagem_vitorias, numero_de_tentativas = problema_de_monty_hall(numero_de_tentativas = 100000, trocar_porta = False)\n",
+    "\n",
+    "probabilidade_estimada = contagem_vitorias / numero_de_tentativas\n",
+    "probabilidade_obtida = 1 / 3\n",
+    "\n",
+    "print(f\"A probabilidade estimada de vitória não mudando de porta é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade obtida de vitória não mudando de porta é de aproximadamente {probabilidade_obtida:.4f} ou {probabilidade_obtida * 100:.2f}%.\")\n",
+    "\n",
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol = 0.05):\n",
+    "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")"
    ]
   },
   {
@@ -261,7 +303,7 @@
     "id": "ZLMuLgq3wrjJ"
    },
    "source": [
-    "A probabilidade estimada de vitória ao mudar de porta é de aproximadamente $0.6666$ ou $66.66$%, enquanto a probabilidade estimada de vitória ao não mudar de porta é de aproximadamente $0.3326$ ou $33.26$%.\n",
+    "Com $100000$ tentativas, a probabilidade estimada de ganhar o prêmio ao mudar de porta é de aproximadamente $0.6674$ ou $66.74$%, um valor bem próximo da probabilidade teórica de $0.6667$ ou $66.67$%, enquanto a probabilidade estimada de ganhar o prêmio ao não mudar de porta é de aproximadamente $0.3333$ ou $33.33$%, um valor bem próximo da probabilidade teórica de $0.3333$ ou $33.33$%. Portanto, a estratégia mais lógica é mudar de porta.\n",
     "\n",
     "Portanto, a estratégia mais lógica é mudar de porta. \n",
     "\n",
@@ -339,35 +381,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "psZKODw_zLMj"
-   },
-   "source": [
-    "a) Encontre uma aproximação para a probabilidade do jogo **não** terminar em empate. Tente encontrar uma justificativa intuitiva para sua resposta."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-28T15:35:47.103279Z",
-     "start_time": "2024-04-28T15:35:42.383644Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8730 ou 87.30%.\n"
-     ]
-    }
-   ],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "def checar_vencedor(tabuleiro):\n",
     "    for linha in tabuleiro:\n",
     "        if linha[0] == linha[1] == linha[2] and linha[0] != '-':\n",
@@ -403,21 +421,51 @@
     "            if vencedor is not None:\n",
     "                return vencedor\n",
     "            elif num_movimentos == 9:\n",
-    "                return \"Draw\"\n",
+    "                return 'Empate'\n",
     "            \n",
     "            jogador_atual = (jogador_atual + 1) % 2\n",
     "            \n",
-    "def jogo_da_velha_aleatorio(num_tentativas = 100000):\n",
-    "    resultados = {'X': 0, 'O': 0, 'Draw': 0}\n",
+    "def jogo_da_velha_aleatorio(numero_de_tentativas = 100000):\n",
+    "    resultados = {'X': 0, 'O': 0, 'Empate': 0}\n",
     "\n",
-    "    for tentativa in range(num_tentativas):\n",
+    "    for numero_de_tentativa in range(numero_de_tentativas):\n",
     "        resultado = jogo()\n",
     "        resultados[resultado] += 1\n",
     "\n",
-    "    return resultados\n",
+    "    return resultados, numero_de_tentativas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "psZKODw_zLMj"
+   },
+   "source": [
+    "a) Encontre uma aproximação para a probabilidade do jogo **não** terminar em empate. Tente encontrar uma justificativa intuitiva para sua resposta."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-28T15:35:47.103279Z",
+     "start_time": "2024-04-28T15:35:42.383644Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade estimada de que o jogo não termine em empate é de aproximadamente 0.8724 ou 87.24%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados, numero_de_tentativas = jogo_da_velha_aleatorio(numero_de_tentativas = 100000)\n",
     "\n",
-    "resultados = jogo_da_velha_aleatorio()\n",
-    "probabilidade_estimada = (resultados['X'] + resultados['O']) / sum(resultados.values())\n",
+    "probabilidade_estimada = (resultados['X'] + resultados['O']) / numero_de_tentativas\n",
     "\n",
     "print(f\"A probabilidade estimada de que o jogo não termine em empate é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")"
    ]
@@ -426,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A probabilidade de que o jogo não termine em empate é de aproximadamente $0.8734$ ou $87.34$%.\n",
+    "Com $100000$ tentativas, a probabilidade estimada de que o jogo não termine em empate é de aproximadamente $0.8726$ ou $87.26$%.\n",
     "\n",
     "Intuitivamente, a probabilidade de que o jogo não termine em empate é alta porque, ao contrário do jogo da velha tradicional, os jogadores não têm uma estratégia definida. \n",
     "\n",
@@ -445,10 +493,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A probabilidade estimada de que o primeiro jogador vença é de aproximadamente 0.5852 ou 58.52%.\n",
+      "A probabilidade estimada de que o segundo jogador vença é de aproximadamente 0.2895 ou 28.95%.\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultados, numero_de_tentativas = jogo_da_velha_aleatorio(numero_de_tentativas = 100000)\n",
+    "\n",
+    "probabilidade_estimada = resultados['X'] / numero_de_tentativas;\n",
+    "\n",
+    "print(f\"A probabilidade estimada de que o primeiro jogador vença é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
+    "\n",
+    "probabilidade_estimada = resultados['O'] / numero_de_tentativas;\n",
+    "\n",
+    "print(f\"A probabilidade estimada de que o segundo jogador vença é de aproximadamente {probabilidade_estimada:.4f} ou {(probabilidade_estimada) * 100:.2f}%.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O jogador que começa tem mais chances de ganhar, pois ele tem uma jogada a mais do que o segundo jogador.\n",
+    "Com $100000$ tentativas, a probabilidade estimada de que o jogador que começa ganhe o jogo é de aproximadamente $0.5852$ ou $58.52$%, enquanto a probabilidade estimada de que o segundo jogador ganhe o jogo é de aproximadamente $0.2895$ ou $28.95$%.\n",
+    "\n",
+    "Isso acontece pois o jogador que começa tem mais chances de ganhar, pois ele tem uma jogada a mais do que o segundo jogador.\n",
     "\n",
     "Para justificar essa afirmação, vamos considerar o seguinte cenário:\n",
     "\n",
