Reestruturando solução da questão 1

--- a/projetos/projeto_01.ipynb
+++ b/projetos/projeto_01.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +117,8 @@
     "id": "nscY444bo5vb"
    },
    "source": [
+    "#### Enunciado\n",
+    "\n",
     "No *slide* 38 de nosso material, resolvemos o seguinte problema, que tem um resultado pouco intuitivo:\n",
     " \n",
     "*Alguém rola dois dados honestos, sem que você veja. Você pergunta a esta pessoa se houve um seis entre os dois lançamentos e ela responde, honestamente, \"sim\". Qual é a probabilidade que os dois dados rolaram seis?*\n",
@@ -125,30 +127,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def rolagem_de_dois_dados(numero_de_tentativas = 100000):\n",
-    "    contagem_pelo_menos_um_seis = 0\n",
-    "    contagem_dois_seis = 0\n",
+    "#### Solução\n",
     "\n",
-    "    for numero_de_tentativa in range(numero_de_tentativas):\n",
-    "        dado1 = np.random.randint(1, 7)\n",
-    "        dado2 = np.random.randint(1, 7)\n",
-    "    \n",
-    "        if dado1 == 6 or dado2 == 6:\n",
-    "            contagem_pelo_menos_um_seis += 1\n",
-    "            if dado1 == 6 and dado2 == 6:\n",
-    "                contagem_dois_seis += 1\n",
-    "                \n",
-    "    return contagem_dois_seis, contagem_pelo_menos_um_seis"
+    "Ao resolvermos a questão em sala de aula, obtemos a seguinte resposta:\n",
+    "\n",
+    "- A probabilidade de obtermos dois lançamentos **6**, sabendo que houve um deles é **6** corresponde a $\\frac{1}{11}$.\n",
+    "\n",
+    "Tendo isso, queremos determinar a probabilidade de, dado o lançamento aleatório de 2 dados, obtermos dois 6 considerando o espaço amostral de \"pelo menos um 6\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rolagem_dois_dados(n_tentativas = 100000):\n",
+    "    pelo_menos_um_seis = 0\n",
+    "    dois_seis = 0\n",
+    "\n",
+    "    for _ in range(n_tentativas):\n",
+    "        dado1 = np.random.randint(1, 7)\n",
+    "        dado2 = np.random.randint(1, 7)\n",
+    "    \n",
+    "        if dado1 == 6 or dado2 == 6:\n",
+    "            pelo_menos_um_seis += 1\n",
+    "            if dado1 == 6 and dado2 == 6:\n",
+    "                dois_seis += 1\n",
+    "                \n",
+    "    return dois_seis / pelo_menos_um_seis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-04-28T15:33:11.864014Z",
@@ -160,22 +175,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A probabilidade estimada é de aproximadamente 0.0909 ou 9.09%.\n",
-      "A probabilidade obtida é de aproximadamente 0.0909 ou 9.09%.\n",
+      "A probabilidade estimada é de aproximadamente 0.0908 ou 9.08%.\n",
+      "A probabilidade real é de 0.0909 ou 9.09%.\n",
       "A probabilidade estimada é próxima da probabilidade obtida.\n"
      ]
     }
    ],
    "source": [
-    "contagem_dois_seis, contagem_pelo_menos_um_seis = rolagem_de_dois_dados(numero_de_tentativas = 1000000)\n",
-    "\n",
-    "probabilidade_estimada = contagem_dois_seis / contagem_pelo_menos_um_seis\n",
-    "probabilidade_obtida = 1 / 11\n",
+    "probabilidade_estimada = rolagem_dois_dados(n_tentativas=100000)\n",
+    "probabilidade_real = 1 / 11\n",
     "\n",
     "print(f\"A probabilidade estimada é de aproximadamente {probabilidade_estimada:.4f} ou {probabilidade_estimada * 100:.2f}%.\")\n",
-    "print(f\"A probabilidade obtida é de aproximadamente {probabilidade_obtida:.4f} ou {probabilidade_obtida * 100:.2f}%.\")\n",
+    "print(f\"A probabilidade real é de {probabilidade_real:.4f} ou {probabilidade_real * 100:.2f}%.\")\n",
     "\n",
-    "if m.isclose(probabilidade_estimada * 100, probabilidade_obtida * 100, rel_tol = 0.05):\n",
+    "if m.isclose(probabilidade_estimada * 100, probabilidade_real * 100, rel_tol = 0.05):\n",
     "    print(\"A probabilidade estimada é próxima da probabilidade obtida.\")"
    ]
   },
@@ -183,13 +196,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com $1000000$ tentativas, a probabilidade estimada de que os dois dados rolaram seis é de aproximadamente $0.0909$ ou $9.09$%, que é um valor bem próximo da probabilidade obtida de aproximadamente $0.0909$ ou $9.09$%.\n",
+    "Caso não tenha ficado claro, aqui está uma descrição das variáveis empregadas:\n",
     "\n",
-    "Em geral, quanto maior o número de tentativas, mais precisa será a estimativa. A lei dos grandes números (assunto do tópico \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado.\n",
+    "- `dois_seis`: Quantidade de vezes em que houveram **dois 6** após o lançamento aleatório dos dados.\n",
+    "- `pelo_menos_um_seis`: Quantidade de vezes em que tivemos no mínimo um seis entre o lançamento dos dados.\n",
+    "- `probabilidade_estimada`: Probabilidade calculada por `rolagem_dois_dados()` após $n$ tentativas de lançamentos aleatórios.\n",
+    "- `probabilidade_real`: Probabilidade calculada matematicamente para a questão.\n",
     "\n",
-    "No caso da **Questão 1**, um número na casa dos 10000 é geralmente suficiente para obter uma estimativa razoavelmente precisa. Isso ocorre porque a rolagem de dados é um processo aleatório com uma distribuição de probabilidade bem definida e relativamente simples.\n",
+    "Por fim, a função `rolagem_dois_dados()` é responsável por retornar a quantidade de vezes que obtemos **dois 6** considerando o espaço amostral de **pelo menos um 6** segundo o enunciado da questão.\n",
     "\n",
-    "No entanto, como veremos no próximo tópico, para processos mais complexos ou com maior variabilidade, pode ser necessário um número maior de tentativas."
+    "Feito isso, definimos o número de tentativas como $100.000$ e conseguimos extrair as seguintes informações com relação à probabilidade de observarmos **dois 6** sabendo que pelo menos um deles é 6:\n",
+    "\n",
+    "- A probabilidade estimada foi de $0.0908$, ou seja, $9.08\\%$.\n",
+    "- A probabilidade real é de $0.0909$, ou seja, $9.09\\%$.\n",
+    "\n",
+    "Podemos concluir que as estimativas são razoavelmente próximas e, portanto, conforme aumentarmos o número de tentativas, as probabilidades se aproximarão cada vez mais. A lei dos grandes números (assunto de \"Variáveis Aleatórias\") afirma que, à medida que o número de tentativas aumenta, a média dos resultados obtidos se aproxima da média esperado."
    ]
   },
   {
